--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         options: ''
         ssh_options: ''
         src: 'dist/*'
-        dest: 'rsync-user@tiye.me:/web-assets/repo/${{ github.repository }}'
+        dest: 'rsync-user@tiye.me:/web-assets/repo/${{ github.repository }}/'
 
     - name: Display status from deploy
       run: echo "${{ steps.deploy.outputs.status }}"
